downloads/qui/resources/qui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qui
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qui
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: config
      labels:
        name: qui
        app: qui
        part-of: downloads
    spec:
      containers:
        - name: qui
          image: qui-image ***REMOVED*** controlled by Kustomize
          ports:
            - containerPort: 7476
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qui-config
