downloads/qui/resources/qui-services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: downloads
  labels:
    app: qui
  name: qui-web
spec:
  ports:
    - name: "qui-web"
      port: 7476
      protocol: TCP
      targetPort: 7476
  selector:
    app: qui
